stop picture moving

--- a/resume.tex
+++ b/resume.tex
@@ -15,35 +15,34 @@ citecolor=blue, urlcolor=blue]{hyperref}
 \pdfcompresslevel=9
 
 \begin{document}
-{\sc \Large Grishin Anton --- Backend Developer \\}
-
+{\sc \large Grishin Anton --- Backend Developer} \\
 \begin{resume}
-  \begin{minipage}[H]{0.52\textwidth}
+  \begin{minipage}[t]{0.55\textwidth}
     \section{\mysidestyle Personal\\Information}
     Grishin Anton \\
     Moscow, Russia \\
     \faLinkedin \space
     \href{https://www.linkedin.com/in/anton-grishin-6966a8362/}{\texttt{anton-grishin}}
     \\
-    \faGithub  \space \href{https://github.com/alchemmist/}{\texttt{alchemmist}} \\
+    \faGithub  \space
+    \href{https://github.com/alchemmist/}{\texttt{alchemmist}} \\
     \faPaperPlane \space \href{https://t.me/alchemmist}{\texttt{@alchemmist}} \\
-    \faPhone \space \href{tel:+1234567890}{\color{blue}\texttt{+7(915)067-2638}}  \\
-    \faEnvelope \space \href{mailto:anton.ingrish@gmail.com}{\color{blue}\texttt{anton.ingrish@gmail.com}}
+    \faPhone \space
+    \href{tel:+1234567890}{\color{blue}\texttt{+7(915)067-2638}}  \\
+    \faEnvelope \space
+    \href{mailto:anton.ingrish@gmail.com}{\color{blue}\texttt{anton.ingrish@gmail.com}}
   \end{minipage}
-  \begin{minipage}[H]{0.28\textwidth}
-    \section{\mysidestyle About me }
-    I am a former professional volleyball player, I graduated from the
-    Olympic reserve sports school. I also graduated from the
-    engineering class at school. \\
-  \end{minipage}%
-  \begin{minipage}[H]{0.25\textwidth}
-      \hspace{5mm}
-      \includegraphics[width=0.65\textwidth]{avatar.png}
-      \\
-    % \begin{textblock}{7}(4.9, 1.55)
-    %   \includegraphics[width=0.27\textwidth]{avatar.png}
-    % \end{textblock}
+  \begin{minipage}[H]{0.18\textwidth}
+    % \includegraphics[width=0.45\textwidth]{avatar.png}
+    % \hspace{5mm}
+    \begin{textblock}{7}(10.54, 1.55)
+      \includegraphics[width=0.27\textwidth]{avatar.png}
+    \end{textblock}
   \end{minipage}
+  \section{\mysidestyle About me}
+  I am a former professional volleyball player, I graduated from the
+  Olympic reserve sports school. I also graduated from the
+  engineering class at school.
 
   \section{\mysidestyle Skills}
   \begin{description}[leftmargin=0pt, itemindent=*]
