setup building with make

--- a/english.tex
+++ b/english.tex
@@ -1,11 +1,11 @@
 \documentclass[margin,line]{resume}
 
-\usepackage[latin1]{inputenc}
-\usepackage[english,french]{babel}
+\usepackage[utf8]{inputenc} 
+\usepackage[english,russian]{babel}
 \usepackage[T1]{fontenc}
 \usepackage{fontawesome}
 
-\usepackage[absolute]{textpos} % Подключите пакет
+\usepackage[absolute]{textpos} 
 \usepackage{enumitem}
 
 \usepackage{graphicx,wrapfig}
@@ -33,10 +33,10 @@ citecolor=blue, urlcolor=blue]{hyperref}
     \href{mailto:anton.ingrish@gmail.com}{\color{blue}\texttt{anton.ingrish@gmail.com}}
   \end{minipage}
   \begin{minipage}[H]{0.18\textwidth}
-    % \includegraphics[width=0.45\textwidth]{avatar.png}
+    % \includegraphics[width=0.45\textwidth]{images/avatar.png}
     % \hspace{5mm}
-    \begin{textblock}{7}(10.54, 1.55)
-      \includegraphics[width=0.27\textwidth]{avatar.png}
+    \begin{textblock}{7}(10.54, 1.5)
+      \includegraphics[width=0.27\textwidth]{images/avatar.png}
     \end{textblock}
   \end{minipage}
   \section{\mysidestyle About me}
@@ -107,8 +107,6 @@ citecolor=blue, urlcolor=blue]{hyperref}
   \end{description}
 
   \vfill
-
-  % === HISTORY ===
 
   \section{\mysidestyle History}\vspace{2mm}
 
