--- a/resume.cls
+++ b/resume.cls
@@ -32,138 +32,138 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % You can have multiple style options the legal options ones are:
 %
-%   centered	the name and address are centered at the top of the
-%		page (default)
+%   centered  the name and address are centered at the top of the
+%    page (default)
 %
-%   line	the name is the left with a horizontal line then 
-%		the address to the right
+%   line  the name is the left with a horizontal line then
+%    the address to the right
 %
-%   overlapped	the section titles overlap the body text (default)
+%   overlapped  the section titles overlap the body text (default)
 %
-%   margin	the section titles are to the left of the body text
-%		
-%   11pt	use 11 point fonts instead of 10 point fonts
+%   margin  the section titles are to the left of the body text
 %
-%   12pt	use 12 point fonts instead of 10 point fonts
+%   11pt  use 11 point fonts instead of 10 point fonts
+%
+%   12pt  use 12 point fonts instead of 10 point fonts
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %   Commands
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%   \Resume	prints the word resume but typeset nicely
+%   \Resume  prints the word resume but typeset nicely
 %
 %   \newsectionwidth{dimen}
-%		defines the amount of space the labels extend
-%		into the left margin.
-%		DO NOT TRY to change any of the dimensions
-%		yourself.  You will probably confuse the style file.
+%    defines the amount of space the labels extend
+%    into the left margin.
+%    DO NOT TRY to change any of the dimensions
+%    yourself.  You will probably confuse the style file.
 %
 %   \name{text} defines your name
 %
 %   \address{text}
-%		defines your address
-%		this can be called twice if you have two addresses
-%		use \\'s to indicate where either line breaks or
-%		comas should go
+%    defines your address
+%    this can be called twice if you have two addresses
+%    use \\'s to indicate where either line breaks or
+%    comas should go
 %
-%   \opening	this prints your name and address at that spot
-%		this is not normally needed, as \begin{resume}
-%		does this but is provided just in case you need
-%		to do something odd
+%   \opening  this prints your name and address at that spot
+%    this is not normally needed, as \begin{resume}
+%    does this but is provided just in case you need
+%    to do something odd
 %
 %   \begin{resume} ... \end{resume}
-%		all of the resume should go inside of this
-%		environment
+%    all of the resume should go inside of this
+%    environment
 %
 %   \section{text}
-%		This prints 'text' in the left hand margin.
-%		Its exact placement depends on what the style 
-%		options has been set to. (overlapped or margin)
-%		You should use \\ to start a new line.	If the
-%		style option is margin, the \\ is converted
-%		to a space.
-%		To use this in any of the list environments, put
-%		the \section after the \item[] but before the 
-%		text.
-%		Eg.
-%		\begin{itemize}
-%		\item\section{text}
-%		text
-%		\end{itemize}
+%    This prints 'text' in the left hand margin.
+%    Its exact placement depends on what the style
+%    options has been set to. (overlapped or margin)
+%    You should use \\ to start a new line.  If the
+%    style option is margin, the \\ is converted
+%    to a space.
+%    To use this in any of the list environments, put
+%    the \section after the \item[] but before the
+%    text.
+%    Eg.
+%    \begin{itemize}
+%    \item\section{text}
+%    text
+%    \end{itemize}
 %
 %   \begin{ncolumn}{n} ... \end{ncolumn}
-%		creates a tabular environment with n equally
-%		spaced columns.  Separate columns by & and
-%		end them with \\
+%    creates a tabular environment with n equally
+%    spaced columns.  Separate columns by & and
+%    end them with \\
 %
 %   \begin{position} ... \end{position}
-%		this is used to print a job description.  There should
-%		be only one job description in it.  Information
-%		related to the job (such as title, dates...) will
-%		be printed.
+%    this is used to print a job description.  There should
+%    be only one job description in it.  Information
+%    related to the job (such as title, dates...) will
+%    be printed.
 %
 %   \begin{format} ... \end{format}
-%		used to change the default format for the position
-%		environment.  Within it the recognized commands are:
-%		\title{option}
-%		\employer{option}
-%		\location{option}
-%		\dates{option}
-%		\body
-%		\\
-%		where option is one of l,r,c standing for left, right, center.
-%		The format will eventually be used to make several
-%		tabular environments and you are defining the number of columns
-%		and the placement of text within the columns of the tabulars.
-%		Each row is terminated by a \\.  Any number of options can 
-%		be on a line, they will each be set in their own columns.
-%		Any of the options except \body may be left out.
+%    used to change the default format for the position
+%    environment.  Within it the recognized commands are:
+%    \title{option}
+%    \employer{option}
+%    \location{option}
+%    \dates{option}
+%    \body
+%    \\
+%    where option is one of l,r,c standing for left, right, center.
+%    The format will eventually be used to make several
+%    tabular environments and you are defining the number of columns
+%    and the placement of text within the columns of the tabulars.
+%    Each row is terminated by a \\.  Any number of options can
+%    be on a line, they will each be set in their own columns.
+%    Any of the options except \body may be left out.
 %
-%		Eg.
-%		\begin{format}
-%		\title{l}\employer{r}\\
-%		\dates{r}\\
-%		\body\\
-%		\location{l}\\
-%		\end{format}
+%    Eg.
+%    \begin{format}
+%    \title{l}\employer{r}\\
+%    \dates{r}\\
+%    \body\\
+%    \location{l}\\
+%    \end{format}
 %
-%		In this example the title and employer information
-%		are set in 2 columns left justified and right justified
-%		respectively.  Then the date is set right justified.
-%		Then the body is set.  Then the location is set left
-%		justified.
+%    In this example the title and employer information
+%    are set in 2 columns left justified and right justified
+%    respectively.  Then the date is set right justified.
+%    Then the body is set.  Then the location is set left
+%    justified.
 %
 % \employer{text}
 % \title{text}
 % \dates{text}
 % \location{text}
-%		declare text for the next invocation of the position
-%		environment
+%    declare text for the next invocation of the position
+%    environment
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Glue
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
-% sectionskip	the amount of horizontal before a section
+% sectionskip  the amount of horizontal before a section
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Dimensions
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
-% sectionwidth	the amount that the section titles go in the
-%		left margin
+% sectionwidth  the amount that the section titles go in the
+%    left margin
 %
-% resumewidth	the width of the total resume from the left
-%		margin to the right.  Don't use textwidth
+% resumewidth  the width of the total resume from the left
+%    margin to the right.  Don't use textwidth
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Definitions
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
-% sectionfont	the font used to print section titles
-%		use \renewcommand to change it
+% sectionfont  the font used to print section titles
+%    use \renewcommand to change it
 %
-% namefont	the font used to print your name
-%		use \renewcommand to change it
+% namefont  the font used to print your name
+%    use \renewcommand to change it
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % THINGS TO DO
@@ -200,13 +200,12 @@
 \ExecuteOptions{overlapped,centered}
 \ProcessOptions\relax
 
-\nofiles	     % resume's don't need .aux files
+\nofiles       % resume's don't need .aux files
 
-
-\newtoks\tabular@text		    % holds the current list being processed
-\newtoks\tabular@head		    % holds the head tabular list
-\newtoks\tabular@tail		    % holds the tail tabular list
-\newtoks\@ta			    % used by \@append
+\newtoks\tabular@text        % holds the current list being processed
+\newtoks\tabular@head        % holds the head tabular list
+\newtoks\tabular@tail        % holds the tail tabular list
+\newtoks\@ta          % used by \@append
 \newtoks\undefined@token\undefined@token={}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -225,7 +224,7 @@
     }{
       % two addresses
       \leavevmode\hbox to \textwidth{\@tablebox{\@addressone}\hfil
-				     \@tablebox{\@addresstwo}}\par
+      \@tablebox{\@addresstwo}}\par
     }%
   }%
 \endgroup}
@@ -246,10 +245,10 @@
     % do nothing
   }{%
     \leavevmode\hbox to \textwidth
-      {\hfill\vbox{\hbox{\@addressone}
-		   \hbox{\@addresstwo}
-		  }%
-      }\par
+    {\hfill\vbox{\hbox{\@addressone}
+        \hbox{\@addresstwo}
+      }%
+    }\par
   }
 \endgroup}
 
@@ -258,7 +257,7 @@
 % There are two types of headings:
 % 1) one with the name centered and the address centered or
 %    in the left and right side if there are two address
-% 2) one where the name is in the upper left corner 
+% 2) one where the name is in the upper left corner
 %    the a line accross the paper
 %    then the address all on one line in the right corner
 %    the second address will be directly below the first if defined
@@ -266,7 +265,6 @@
 \let\print@name\relax
 \def\ds@centered{\ifx\print@name\relax\let\print@name\@printcentername\fi}
 \def\ds@line{\ifx\print@name\relax\let\print@name\@linename\fi}
-
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Use this to set the sectionwidth.
@@ -284,13 +282,12 @@
 \sectionskip=3.5ex plus 1ex minus -.2ex % values stolen from LaTeX
 
 \def\newsectionwidth#1{%
-		     \sectionwidth=#1
-		     \textwidth=\resumewidth
-		     \advance\textwidth-\sectionwidth
-		     \hsize=\textwidth
-		     \hoffset=\sectionwidth
+  \sectionwidth=#1
+  \textwidth=\resumewidth
+  \advance\textwidth-\sectionwidth
+  \hsize=\textwidth
+  \hoffset=\sectionwidth
 }
-
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % This is for sectiontitles that are entirely in the left margin.
@@ -314,7 +311,7 @@
   % this macro may be called in a tabular.  Special code must be written
   % to accomodate this.  In LaTeX, a tabular is made out of hboxes.
   % TeX never goes into horizontal mode because of this; it only
-  % gets into vertical mode and restricted horizontal mode.  Certain 
+  % gets into vertical mode and restricted horizontal mode.  Certain
   % indenting problems must be handled because of this.  They
   % are delt with at the end of this routine.
   % It is also necessary to close the hbox that was created before
@@ -327,11 +324,11 @@
   % more text\\
   % ...
   \ifx\\\@tabcr    % is this in a tabular? (this *should* work but is a cludge)
-    \@stopfield    % the is the first part of a \kill
-   \else
-     \@@par	     % This will end the previous paragraph if needed and
-		   % go into vertical mode.  If this was already in
-		   % vertical mode then the \par does nothing.
+  \@stopfield    % the is the first part of a \kill
+  \else
+  \@@par       % This will end the previous paragraph if needed and
+  % go into vertical mode.  If this was already in
+  % vertical mode then the \par does nothing.
 
   \fi
   \begingroup
@@ -339,80 +336,79 @@
   \def\par{\@@par}%
   \let\\=\@normalcr
   \addpenalty{\@secpenalty} % this would be a good place for a page break
-			    % \@secpenalty is what LaTeX uses before its
-			    % section's.  It happens to be -300
+  % \@secpenalty is what LaTeX uses before its
+  % section's.  It happens to be -300
   \addvspace{\sectionskip}  % put in a bit of glue
   % The following hbox will be contributed to the page list without going
   % into horizontal mode.  Therefore, any \parindent's, \parshape's, \leftskip
   % will be ignored but \hoffset's are not.  The result is that the box will
   % only by \hoffset. This is what I want
   \hbox to 0pt{%
-    \hss	 % this is an llap.  In other words, this glue
-		 % will shrink by the width of the stuff in the vbox
-		 % (\sectionwidth) into the left margin and then
-		 % insert the contents of the vbox.
+    \hss   % this is an llap.  In other words, this glue
+    % will shrink by the width of the stuff in the vbox
+    % (\sectionwidth) into the left margin and then
+    % insert the contents of the vbox.
     \vtop to 0pt{% make a 0pt height paragraph, with the baseline at the
-		 % lined up with the baseline of the first box in the list
+      % lined up with the baseline of the first box in the list
       \leftskip=0pt
       \hsize=\sectionwidth
       \textwidth=\sectionwidth
       \raggedright     % you don't want this filled out to the right margin
       \sectionfont
-      #1\vss	       % Go into horizontal mode; do the paragraph;
-		       % go into vertical mode; add some negative glue 
-		       % to give a box of 0pt height and depth
+      #1\vss         % Go into horizontal mode; do the paragraph;
+      % go into vertical mode; add some negative glue
+      % to give a box of 0pt height and depth
     }%
   }%
   \addpenalty{-\@secpenalty} % this would be a bad place for a page break
   \vskip-\baselineskip % when the next box is processed, baselineskip glue
-		       % glue will be added (the box has no depth because of
-		       % the \vss; therefore, we don't have to worry about
-		       % \lineskiplimit).  This -\baselineskip glue
-		       % is to undo this.  \nointerlineskip doesn't
-		       % work because the baseline of this line would be lined
-		       % up with the top of the top of the next box.  We
-		       % want the baselines lined up.
-		       %
-		       % It may have been possible to do this by forcing the
-		       % baseline of this box to be the top of the box but
-		       % then the interline skip between this box and the
-		       % previous box would be off as the baselines of the
-		       % this box (the one that being made above) and the
-		       % previous line would be separated by \baselineskip
-		       % (probably, it may be separted by the depth of the
-		       % previous box + \lineskip) but as the baseline of
-		       % this box has been moved to the top, the box's would
-		       % separted by to much glue.  The exact amount being
-		       % the height of this box.
+  % glue will be added (the box has no depth because of
+  % the \vss; therefore, we don't have to worry about
+  % \lineskiplimit).  This -\baselineskip glue
+  % is to undo this.  \nointerlineskip doesn't
+  % work because the baseline of this line would be lined
+  % up with the top of the top of the next box.  We
+  % want the baselines lined up.
+  %
+  % It may have been possible to do this by forcing the
+  % baseline of this box to be the top of the box but
+  % then the interline skip between this box and the
+  % previous box would be off as the baselines of the
+  % this box (the one that being made above) and the
+  % previous line would be separated by \baselineskip
+  % (probably, it may be separted by the depth of the
+  % previous box + \lineskip) but as the baseline of
+  % this box has been moved to the top, the box's would
+  % separted by to much glue.  The exact amount being
+  % the height of this box.
   \endgroup
   \ifx\\\@tabcr   % is this in a tabular? (this *should* work but is a cludge)
-    % this is the second part of the \kill; it starts the next tabbing line
-    % Because this routine will never get into paragraph mode when used in
-    % tabbing the \parskip that is discussed below will never be inserted.
-    % Therefore it should not be negated as done below.
-    \@startline
-    \ignorespaces
+  % this is the second part of the \kill; it starts the next tabbing line
+  % Because this routine will never get into paragraph mode when used in
+  % tabbing the \parskip that is discussed below will never be inserted.
+  % Therefore it should not be negated as done below.
+  \@startline
+  \ignorespaces
   \else
-    \vskip-\parskip    % The next thing to be contributed will be a paragraph.
-		       % Right before being contributed though a \vskip\parskip
-		       % will be inserted.  This is to negate it.
-		       %
-		       % I do consider this to be a bit of a cludge but
-		       % I can not find a way to write \unskipfutureskip
-		       % or a way to make TeX think that nothing has
-		       % been contributed to the page list.
+  \vskip-\parskip    % The next thing to be contributed will be a paragraph.
+  % Right before being contributed though a \vskip\parskip
+  % will be inserted.  This is to negate it.
+  %
+  % I do consider this to be a bit of a cludge but
+  % I can not find a way to write \unskipfutureskip
+  % or a way to make TeX think that nothing has
+  % been contributed to the page list.
   \fi
 }
-
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % This is for sectiontitles that are entirely above the section text
 %
 \def\unboxed@sectiontitle#1{%
   \ifx\\\@tabcr % see boxed@sectiontitle for explation
-    \@stopfield
-   \else
-     \@@par
+  \@stopfield
+  \else
+  \@@par
   \fi
   \begingroup
   \everypar={}%
@@ -424,9 +420,9 @@
   \addpenalty{-\@secpenalty} % this would be a bad place for a page break
   \endgroup
   \ifx\\\@tabcr   % see boxed@sectiontitle for explation
-    \@startline
+  \@startline
   \else
-    \vskip-\parskip
+  \vskip-\parskip
   \fi
   \ignorespaces
 }
@@ -451,8 +447,8 @@
 % overlapped section titles
 %
 % format is:
-%    title	 employer
-%    location	 dates
+%    title   employer
+%    location   dates
 %    body
 % with everything in the left of its column
 
@@ -460,7 +456,6 @@
 
 \if@line\ds@line\else\ds@centered\fi
 \if@margin\ds@margin\else\ds@overlapped\fi
-
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % typeset resume all nice and pretty
@@ -470,16 +465,18 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % makes a line of width \textwidth starting at -\hoffset
 %
-\def\fullline{		% hrules only listen to \hoffset
-  \nointerlineskip	% so I have this code	  
-  \moveleft\hoffset\vbox{\hrule width\textwidth} 
+\def\fullline{    % hrules only listen to \hoffset
+  \nointerlineskip  % so I have this code
+  \moveleft\hoffset\vbox{\hrule width\textwidth}
   \nointerlineskip
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % create a multiline box.
 %
-\def\@tablebox#1{\begin{tabular}[t]{@{}l@{\extracolsep{\fill}}}#1\end{tabular}}
+\def\@tablebox#1{
+  \begin{tabular}[t]{@{}l@{\extracolsep{\fill}}}#1
+\end{tabular}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % use this to define your name
@@ -495,7 +492,7 @@
 \let\@addresstwo\relax
 
 \def\address#1{
-  \@ifundefined{@addressone}{\def\@addressone{#1}}{\def\@addresstwo{#1}}}
+\@ifundefined{@addressone}{\def\@addressone{#1}}{\def\@addresstwo{#1}}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % if you want to print your name and address is a slightly
@@ -504,10 +501,10 @@
 %
 \def\opening{\def\@opening{}
   \begingroup
-  \leftskip=-\hoffset	     % I use leftskip to move things to the left as 
+  \leftskip=-\hoffset       % I use leftskip to move things to the left as
   \advance\textwidth\hoffset % changing hoffset doesn't work. But this
-  \hsize=\textwidth	     % doesn't really work as hboxes are rules
-			     % are unaffeted
+  \hsize=\textwidth       % doesn't really work as hboxes are rules
+  % are unaffeted
   \let\par=\@@par
   \parindent=0pt
   \parskip=0pt
@@ -519,7 +516,7 @@
 % all of the resume goes in the resume environment
 %
 \newenvironment{resume}{\begingroup
-		       \@ifundefined{@opening}{\opening}{}
+  \@ifundefined{@opening}{\opening}{}
 }{\endgroup}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -532,16 +529,16 @@
 \def\@endpbox{\par\egroup\hfil}
 \let\@@endpbox=\@endpbox
 
-\newdimen\@columnwidth	  % the width of each column equal to
+\newdimen\@columnwidth    % the width of each column equal to
 \def\ncolumn#1{%
   % \@columnwidth = \textwidth / #1
   \@columnwidth=\textwidth \divide\@columnwidth by #1
   \begin{tabular*}{\textwidth}[t]%
-	{*{#1}{@{}p{\@columnwidth}@{\extracolsep{\fill}}}}
-}
+    {*{#1}{@{}p{\@columnwidth}@{\extracolsep{\fill}}}}
+  }
 
-\def\endncolumn{\end{tabular*}}
-
+  \def\endncolumn{
+\end{tabular*}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %   \employer{text} defines employer to be text
@@ -560,14 +557,13 @@
 \let\r@justify\raggedleft
 \let\c@justify\centering
 
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % \@format{name}{justify}
-% will define \print@#1 to print it's one argument 
+% will define \print@#1 to print it's one argument
 % justified according to #2 which can be
-%	  l = left
-%	  r = right
-%	  c = center
+%    l = left
+%    r = right
+%    c = center
 %
 % eg.
 %    \@format{employer}{c}
@@ -575,7 +571,7 @@
 %
 \def\@format#1#2{%
   \expandafter\gdef\csname print@#1\endcsname##1{%
-    {\csname#2@justify\endcsname##1\par}}
+  {\csname#2@justify\endcsname##1\par}}
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -588,8 +584,8 @@
 %  \location{pos}
 %  \dates{pos}
 %  \title{pos}
-%  \body	    (for the body of the position environment)
-%   where pos is 
+%  \body      (for the body of the position environment)
+%   where pos is
 %     l for left
 %     r for right
 %     c for center
@@ -614,31 +610,31 @@
 \newcounter{numberofcolumns}
 \newenvironment{format}{%
   \def\end@line@head{\append@tabular@head{tabular@text}\tabular@text={}%
-    \c@numberofcolumns 0}
+  \c@numberofcolumns 0}
   \def\end@line@tail{\append@tabular@tail{tabular@text}\tabular@text={}%
-    \c@numberofcolumns 0}
+  \c@numberofcolumns 0}
   \tabular@text={}
   \tabular@head={}
   \tabular@tail={}
   \c@numberofcolumns 0
   \let\\=\end@line@head
   \def\employer##1{\advance\c@numberofcolumns 1
-		   \@format{employer}{##1}
-		   \append@tabular@text{employer}}
+    \@format{employer}{##1}
+  \append@tabular@text{employer}}
   \def\location##1{\advance\c@numberofcolumns 1
-		   \@format{location}{##1}
-		   \append@tabular@text{location}}
+    \@format{location}{##1}
+  \append@tabular@text{location}}
   \def\dates##1{\advance\c@numberofcolumns 1
-		\@format{dates}{##1}
-		\append@tabular@text{dates}}
+    \@format{dates}{##1}
+  \append@tabular@text{dates}}
   \def\title##1{\advance\c@numberofcolumns 1
-		 \@format{title}{##1}
-		\append@tabular@text{title}}
+    \@format{title}{##1}
+  \append@tabular@text{title}}
   \def\body{\iftoks\tabular@head\undefined@token\then
-	    \else
-	      \@append{\noexpand\\}\to\tabular@head
-	    \skotfi
-	    \let\\=\end@line@tail}}{}
+    \else
+    \@append{\noexpand\\}\to\tabular@head
+    \skotfi
+\let\\=\end@line@tail}}{}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %taken from page 378 of TeXbook but freely hacked
@@ -651,7 +647,6 @@
   \global#2=\expandafter{\@append@temp}%
 }
 
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % CHAA006%vaxb.rhbnc.ac.uk@NSS.Cs.Ucl.AC.UK
 % texhax.88.078
@@ -661,29 +656,28 @@
 
 \let \then = \empty
 \def \iftoks #1#2\then #3\else #4\skotfi{
-		\edef \1{\the #1}
-		\edef \2{\the #2}
-		\ifx \1\2\then #3\else #4\fi}
-
+  \edef \1{\the #1}
+  \edef \2{\the #2}
+\ifx \1\2\then #3\else #4\fi}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % \append@tabular@text{command}
 %
 % appends command to the end of \tabular@text.
 % NOTE: command MUST be a command but without the \
-%	Eg. \append@tabular@text{relax}
+%  Eg. \append@tabular@text{relax}
 %
 % used to define \tabular@text for the tabular environment
 % used by append@tabular@head and append@tabular@tail
 %
 
 \def\append@tabular@text#1{%
-\iftoks\tabular@text\undefined@token\then
+  \iftoks\tabular@text\undefined@token\then
   \global\tabular@text=\expandafter{\csname @#1\endcsname}
-\else
+  \else
   \@append{&}\to\tabular@text
   \@append{\csname @#1\endcsname}\to\tabular@text
-\skotfi
+  \skotfi
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -691,7 +685,7 @@
 %
 % appends command to the end of \tabular@text@head
 % NOTE: command MUST be a command but without the \
-%	Eg. \append@tabular@head{relax}
+%  Eg. \append@tabular@head{relax}
 %
 % used to define \tabular@head for the tabular environment
 % used by the position environment
@@ -699,16 +693,18 @@
 \def\append@tabular@head#1{%
   \ifnum\the\c@numberofcolumns=0\relax
   \else
-    \iftoks\tabular@head\undefined@token\then
-      \relax
-    \else
-      \@append{\noexpand\\}\to\tabular@head
-      \@append{\noexpand\penalty-\@secpenalty}\to\tabular@head
-    \skotfi
-    \@append{\noexpand\begin{ncolumn}}\to\tabular@head
+  \iftoks\tabular@head\undefined@token\then
+  \relax
+  \else
+  \@append{\noexpand\\}\to\tabular@head
+  \@append{\noexpand\penalty-\@secpenalty}\to\tabular@head
+  \skotfi
+  \@append{\noexpand
+  \begin{ncolumn}}\to\tabular@head
     \@append{\expandafter{\the\c@numberofcolumns}}\to\tabular@head
     \@append{\the\csname#1\endcsname}\to\tabular@head
-    \@append{\noexpand\end{ncolumn}}\to\tabular@head
+    \@append{\noexpand
+  \end{ncolumn}}\to\tabular@head
   \fi
 }
 
@@ -717,7 +713,7 @@
 %
 % appends command to the end of \tabular@text@htail
 % NOTE: command MUST be a command but without the \
-%	Eg. \append@tabular@tail{relax}
+%  Eg. \append@tabular@tail{relax}
 %
 % used to define \tabular@tail for the tabular environment
 % used by the position environment
@@ -725,15 +721,17 @@
 \def\append@tabular@tail#1{%
   \ifnum\the\c@numberofcolumns=0\relax
   \else
-    \iftoks\tabular@tail\undefined@token\then
-    \else
-      \@append{\noexpand\\}\to\tabular@tail
-      \@append{\noexpand\penalty-\@secpenalty}\to\tabular@tail
-    \skotfi
-    \@append{\noexpand\begin{ncolumn}}\to\tabular@tail
+  \iftoks\tabular@tail\undefined@token\then
+  \else
+  \@append{\noexpand\\}\to\tabular@tail
+  \@append{\noexpand\penalty-\@secpenalty}\to\tabular@tail
+  \skotfi
+  \@append{\noexpand
+  \begin{ncolumn}}\to\tabular@tail
     \@append{\expandafter{\the\c@numberofcolumns}}\to\tabular@tail
     \@append{\the\csname#1\endcsname}\to\tabular@tail
-    \@append{\noexpand\end{ncolumn}}\to\tabular@tail
+    \@append{\noexpand
+  \end{ncolumn}}\to\tabular@tail
   \fi
 }
 
@@ -743,19 +741,19 @@
 % in the ... describe the position.
 % don't put the \dates \location etc in here. define them before hand
 \newenvironment{position}%
-  {%
-   \begingroup
-     \par
-       \the\tabular@head
-%     \addpenalty{-\@secpenalty}% bad place for a page break
-     \penalty -\@secpenalty % bad place for a page break
-     \penalty 10000
-     \ignorespaces
-  }{%
-       \the\tabular@tail
-%     \addpenalty{\@secpenalty}% good place for a page break
-     \penalty \@secpenalty % good place for a page break
-    \endgroup
+{%
+  \begingroup
+  \par
+  \the\tabular@head
+  %     \addpenalty{-\@secpenalty}% bad place for a page break
+  \penalty -\@secpenalty % bad place for a page break
+  \penalty 10000
+  \ignorespaces
+}{%
+  \the\tabular@tail
+  %     \addpenalty{\@secpenalty}% good place for a page break
+  \penalty \@secpenalty % good place for a page break
+  \endgroup
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -765,8 +763,8 @@
 % overlapped section titles
 %
 % format is:
-%    title	 employer
-%    location	 dates
+%    title   employer
+%    location   dates
 %    body
 % with everything in the left of its column
 
@@ -784,18 +782,18 @@
 \parskip \baselineskip
 \setcounter{secnumdepth}{0}
 \def\@listI{\leftmargin\leftmargini
-\topsep 0pt 
-\parskip 0pt
-\partopsep 10pt plus 2pt
-\parsep 2pt plus 2pt
+  \topsep 0pt
+  \parskip 0pt
+  \partopsep 10pt plus 2pt
+  \parsep 2pt plus 2pt
 \itemsep \parsep}
 
 \pagestyle{empty}  % don't want page numbers
 
 \begin{format}
-\title{l}\employer{r}\\
-\location{l}\dates{r}\\
-\body\\
+  \title{l}\employer{r}\\
+  \location{l}\dates{r}\\
+  \body\\
 \end{format}
 
 \let\section\@@section
@@ -807,7 +805,8 @@
 % @date     Decemebr 2007
 % @author   Kamil K Wojcicki
 % @info     This a fusion of resume template code by Chris Paciorek
-%           (url: http://www.biostat.harvard.edu/~paciorek/computingTips/Latex_template_creating_CV_.html)
+%           (url:
+% http://www.biostat.harvard.edu/~paciorek/computingTips/Latex_template_creating_CV_.html)
 %           and res.cls class by Michael DeCorte.
 %           I have merged these for educational purposes only.
 
@@ -825,19 +824,28 @@
   \begin{list}{\ding{113}}{%
       \setlength{\itemsep}{0in}
       \setlength{\parsep}{0in} \setlength{\parskip}{0in}
-      \setlength{\topsep}{0in} \setlength{\partopsep}{0in} 
-      \setlength{\leftmargin}{0in}}}{\end{list}}
+      \setlength{\topsep}{0in} \setlength{\partopsep}{0in}
+  \setlength{\leftmargin}{0in}}}{
+\end{list}}
 
 \newenvironment{list2}{
   \begin{list}{$\bullet$}{%
       \setlength{\itemsep}{0in}
       \setlength{\parsep}{0in} \setlength{\parskip}{0in}
-      \setlength{\topsep}{0in} \setlength{\partopsep}{0in} 
-      \setlength{\leftmargin}{0.25in}}}{\end{list}}
+      \setlength{\topsep}{0in} \setlength{\partopsep}{0in}
+  \setlength{\leftmargin}{0.25in}}}{
+\end{list}}
 
 %\newcommand{\mysidestyle}{\footnotesize\sc}
 \newcommand{\mysidestyle}{\small\sc}
 \newcommand{\myheadingstyle}{\sl}
 \newcommand{\mysubheadingstyle}{\sl}
+
+
+
+
+
+
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
