add yandex-lyceum certified to attachments

--- a/russian.tex
+++ b/russian.tex
@@ -1,6 +1,5 @@
 \documentclass[margin,line]{resume}
 
-
 \usepackage[utf8]{inputenc}
 \usepackage[english,russian]{babel}
 \usepackage[T1]{fontenc}
@@ -60,7 +59,6 @@ citecolor=blue, urlcolor=blue]{hyperref}
     \item[Languages:] Russian, English.
   \end{description}
 
-
   \section{\mysidestyle Образование}
   Центральный Университет - Математика и компьютерные науки, 2028
 
@@ -84,149 +82,149 @@ citecolor=blue, urlcolor=blue]{hyperref}
 
   \hfill \textsl{Ноябрь 2024}
 
-      \textbf{Я выиграл научно-практическую конференцию «Наука для жизни»} с проектом умного дома для частных и государственных образовательных учреждений (технологический стек: Redis, Zigbee2MQTT, websockets, Go, Python, Flask, React).
-    \vspace{-6mm}
+  \textbf{Я выиграл научно-практическую конференцию «Наука для
+  жизни»} с проектом умного дома для частных и государственных
+  образовательных учреждений (технологический стек: Redis,
+  Zigbee2MQTT, websockets, Go, Python, Flask, React).
+  \vspace{-6mm}
 
-    \hfill \textsl{June 2024}
+  \hfill \textsl{June 2024}
 
   \textbf{Участвовал в хакаотне Nuclear IT hack}, где моя команда
-    работала над кейсом Росатома по разработке сервиса для определения
-    эмоционального тона онлайн-встреч. Я создал
-    прототипы и реализовал фронтенд на React, а моя команда
-    обучала модель.
+  работала над кейсом Росатома по разработке сервиса для определения
+  эмоционального тона онлайн-встреч. Я создал
+  прототипы и реализовал фронтенд на React, а моя команда
+  обучала модель.
 
-    \vspace{-6mm}
+  \vspace{-6mm}
 
-    \hfill \textsl{Апрель 2024}
+  \hfill \textsl{Апрель 2024}
 
-    \section{\mysidestyle Interestings}\vspace{2mm}
-    \begin{description}
-      \item[Philosophy] Unix, Linux and Windows
-      \item[Books:] Unix, Linux and Windows
+  \section{\mysidestyle Interestings}\vspace{2mm}
+  \begin{description}
+    \item[Philosophy] Unix, Linux and Windows
+    \item[Books:] Unix, Linux and Windows
+  \end{description}
+
+  \vfill
+  % ------------------------------------------------------------------ %
+
+  \section{\mysidestyle История}\vspace{2mm}
+
+  \begin{description}
+
+    \item[Measurement Engineer (CNRS)]\small{XLIM \hfill \textsl{June
+      2016-Present}}\\
+    \item[Lecturer]\small{University of Colorado, Boulder \hfill
+      \textsl{January 2016-May 2016}}\\
+      ECEN 5014-003, ``Microwave Measurements and Calibration Fundamentals''
+      \vspace{2mm}
+
+    \item[Research Associate]\small{University of Colorado at Boulder
+      \hfill \textsl{June 2013-May 2016}}\\
+      Achievements:
+      \begin{list2}
+      \item{LabVIEW software for a ``Do-it-yourself'' Large-Signal
+        Network Analyzer (LSNA)}
+      \item{Time domain measurement setup in Scilab (VTD-SWAP)}
+      \item{Outphasing PA characterizations}
+      \item{Load-pull in time-domain}
+      \end{list2}
+      \vspace{2mm}
+
+    \item[Measurement Engineer (CNRS)]\small{XLIM \hfill
+      \textsl{December 2007-May 2013}}\\
+      Achievements:
+      \begin{list2}
+      \item{Korrigan European Project activities (RTP
+            N$^{\circ}$102.052 funded within the EUROPA framework in the
+          CEPA2 priority area - ends early 2009) : GaN HEMTs circuits
+          level modeling from european foundries (Thales / QinetiQ) for
+        HPA, LNA and Switches}
+      \item{Time domain measurement setup (LSNA) development on
+        Scilab-TCL/TK (GUI, calibration and measurement automation)}
+      \item{Development of HEMTs modeling tools (Scilab)}
+      \item{Contractual measurements such as load-pull, linearity,
+        high impedance probe in both frequency (VNA) and time domain (LSNA)}
+      \end{list2}
+      \vspace{2mm}
+
+    \item[Research Associate - Visiting Scholar]\small{University of
+      Colorado at Boulder \hfill \textsl{February 2012-July 2012}}\\
+      GaN HEMTs based rectifiers characterizations and analysis
+      \vspace{2mm}
+
+    \item[Research Engineer (CNRS)]\small{XLIM \hfill \textsl{May
+      2005-November 2007}}\\
+      Achievements:
+      \begin{list2}
+      \item{Frequency domain load-pull measurement setup (VNA in
+          receiver mode with pulse capabilities) developpemnt with
+          Scilab (calibration procedures, measurement automation, data
+        processing)}
+      \item{Large signal caracterization of transistor (mainly
+          european GaN in the framework of Korrigan}
+        \item{Korrigan WP3.3 workpackage leader in Korrigan.
+            Developpement of a internet database (Php / mySQL) to let
+          partners share data and informations}
+        \item{GaN HEMTs ``spice-like'' nonlinear models}
+        \end{list2}
+        \vspace{2mm}
+
+      \item[Research Engineer]\small{NMDG Engineering bvba \hfill
+        \textsl{November 2004-February 2005}}\\
+        Implementation of the High Impedance Probe module
+        (calibration and measurements) in the commercial LSNA
+        Software (based on Mathematica)
+
+        \vspace{2mm}
+
+      \item[Postdoctoral scientist]\small{CNES (French Space Agency)
+        \hfill \textsl{October 2003-September 2004}}\\
+        Development of characterization tools interfaces within the
+        free open-source scientific package Scilab
+
+        \vspace{2mm}
+
+      \item[Postdoctoral scientist]\small{CNES (French Space Agency)
+        \hfill \textsl{October 2002-September 2003}}\\
+        Achievements:
+        \begin{list2}
+        \item{Large Signal Network Analysis (LSNA) characterizations
+          in time-domain}
+        \item{Development of a new LSNA module in order to
+            investigate time domain waveforms at internal nodes of
+            MMICs with high impedance probes (HIP) to validate circuits
+          designs and to analyze nonlinear parametric stability}
+        \item{Large Signal Network Analysis (LSNA) characterizations
+          in time-domain}
+        \end{list2}
+        \vspace{2mm}
+
+      \item[Лицей Академии Яндекса]\small{Проект SchoolRing \hfill
+        \textsl{Октябрь 2022-Ноябрь 2022}}\\
+        Описание проекта:
+        \begin{list2}
+        \item{Development of the RF time-domain envelope measurement
+          setup (hardware and software)}
+        \item{Development of the calibration procedure of the
+          time-domain envelope measurement setup}
+        \item{Power amplifiers characterizations : Load-pull, IM3, NPR}
+        \item{Behavioral modeling of nonlinear devices with memory
+          effects for system level}
+        \item{Development of a dynamic complex gain model with
+          neural networks}
+        \end{list2}
+        \vspace{2mm}
+
+      \item[Начало обучения]\small{Курс Stepik
+        \hfill \textsl{Сентябрь 2021-Апрель 2022\vspace{2mm}}\\
+        После пустпления в инженерный класс, я заинтересовался
+        программирваинием, и начал самостоятельно проходить курс по
+        Python на степик и уже в апреле его с отличием
+        \textit{(\href{https://github.com/alchemmist/CV/blob/main/attachments/stepik-python-course.pdf}{сертификат})}.
+
     \end{description}
 
-    \vfill
-
-    \section{\mysidestyle History}\vspace{2mm}
-
-    \begin{description}
-
-      \item[Measurement Engineer (CNRS)]\small{XLIM \hfill \textsl{June
-        2016-Present}}\\
-      \item[Lecturer]\small{University of Colorado, Boulder \hfill
-        \textsl{January 2016-May 2016}}\\
-        ECEN 5014-003, ``Microwave Measurements and Calibration Fundamentals''
-        \vspace{2mm}
-
-      \item[Research Associate]\small{University of Colorado at Boulder
-        \hfill \textsl{June 2013-May 2016}}\\
-        Achievements:
-        \begin{list2}
-        \item{LabVIEW software for a ``Do-it-yourself'' Large-Signal
-          Network Analyzer (LSNA)}
-        \item{Time domain measurement setup in Scilab (VTD-SWAP)}
-        \item{Outphasing PA characterizations}
-        \item{Load-pull in time-domain}
-        \end{list2}
-        \vspace{2mm}
-
-      \item[Measurement Engineer (CNRS)]\small{XLIM \hfill
-        \textsl{December 2007-May 2013}}\\
-        Achievements:
-        \begin{list2}
-        \item{Korrigan European Project activities (RTP
-              N$^{\circ}$102.052 funded within the EUROPA framework in the
-            CEPA2 priority area - ends early 2009) : GaN HEMTs circuits
-            level modeling from european foundries (Thales / QinetiQ) for
-          HPA, LNA and Switches}
-        \item{Time domain measurement setup (LSNA) development on
-          Scilab-TCL/TK (GUI, calibration and measurement automation)}
-        \item{Development of HEMTs modeling tools (Scilab)}
-        \item{Contractual measurements such as load-pull, linearity,
-          high impedance probe in both frequency (VNA) and time domain (LSNA)}
-        \end{list2}
-        \vspace{2mm}
-
-      \item[Research Associate - Visiting Scholar]\small{University of
-        Colorado at Boulder \hfill \textsl{February 2012-July 2012}}\\
-        GaN HEMTs based rectifiers characterizations and analysis
-        \vspace{2mm}
-
-      \item[Research Engineer (CNRS)]\small{XLIM \hfill \textsl{May
-        2005-November 2007}}\\
-        Achievements:
-        \begin{list2}
-        \item{Frequency domain load-pull measurement setup (VNA in
-            receiver mode with pulse capabilities) developpemnt with
-            Scilab (calibration procedures, measurement automation, data
-          processing)}
-        \item{Large signal caracterization of transistor (mainly
-            european GaN in the framework of Korrigan}
-          \item{Korrigan WP3.3 workpackage leader in Korrigan.
-              Developpement of a internet database (Php / mySQL) to let
-            partners share data and informations}
-          \item{GaN HEMTs ``spice-like'' nonlinear models}
-          \end{list2}
-          \vspace{2mm}
-
-        \item[Research Engineer]\small{NMDG Engineering bvba \hfill
-          \textsl{November 2004-February 2005}}\\
-          Implementation of the High Impedance Probe module
-          (calibration and measurements) in the commercial LSNA
-          Software (based on Mathematica)
-
-          \vspace{2mm}
-
-        \item[Postdoctoral scientist]\small{CNES (French Space Agency)
-          \hfill \textsl{October 2003-September 2004}}\\
-          Development of characterization tools interfaces within the
-          free open-source scientific package Scilab
-
-          \vspace{2mm}
-
-        \item[Postdoctoral scientist]\small{CNES (French Space Agency)
-          \hfill \textsl{October 2002-September 2003}}\\
-          Achievements:
-          \begin{list2}
-          \item{Large Signal Network Analysis (LSNA) characterizations
-            in time-domain}
-          \item{Development of a new LSNA module in order to
-              investigate time domain waveforms at internal nodes of
-              MMICs with high impedance probes (HIP) to validate circuits
-            designs and to analyze nonlinear parametric stability}
-          \item{Large Signal Network Analysis (LSNA) characterizations
-            in time-domain}
-          \end{list2}
-          \vspace{2mm}
-
-        \item[Researcher]\small{IRCOM / University of Limoges \hfill
-          \textsl{October 1998-September 2002}}\\
-          Achievements:
-          \begin{list2}
-          \item{Development of the RF time-domain envelope measurement
-            setup (hardware and software)}
-          \item{Development of the calibration procedure of the
-            time-domain envelope measurement setup}
-          \item{Power amplifiers characterizations : Load-pull, IM3, NPR}
-          \item{Behavioral modeling of nonlinear devices with memory
-            effects for system level}
-          \item{Development of a dynamic complex gain model with
-            neural networks}
-          \end{list2}
-          \vspace{2mm}
-
-        \item[Lecturer]\small{University of Limoges \hfill
-          \textsl{October 1998-September 2002}}\\
-          RF devices, analog/digital communication systems, signal
-          processing, propagation waves...
-          \vspace{2mm}
-
-        \item[Postgraduate student]\small{IRCOM / University of Limoges
-          \hfill \textsl{February 1998-July 1998}}\\
-          Circuits level simulations of IM3 and NPR in order to
-          optimize the trade-off between linearity and efficiency
-
-      \end{description}
-
-    \end{resume}
-    \end{document}
+  \end{resume}
+  \end{document}
