--- a/russian.tex
+++ b/russian.tex
@@ -13,6 +13,9 @@
 \usepackage[colorlinks=true, pdfstartview=FitV, linkcolor=blue,
 citecolor=blue, urlcolor=blue]{hyperref}
 \pdfcompresslevel=9
+\usepackage{xcolor}
+\usepackage{eso-pic}
+
 
 \begin{document}
 {\sc \large Гришин Антон --- Backend разработчик} \\
@@ -33,9 +36,7 @@ citecolor=blue, urlcolor=blue]{hyperref}
     \href{mailto:anton.ingrish@gmail.com}{\color{blue}\texttt{anton.ingrish@gmail.com}}
   \end{minipage}
   \begin{minipage}[H]{0.18\textwidth}
-    % \includegraphics[width=0.45\textwidth]{images/avatar.png}
-    % \hspace{5mm}
-    \begin{textblock}{7}(10.54, 1.5)
+    \begin{textblock}{7}(10.79, 1.5)
       \includegraphics[width=0.27\textwidth]{images/avatar.png}
     \end{textblock}
   \end{minipage}
@@ -201,7 +202,7 @@ citecolor=blue, urlcolor=blue]{hyperref}
         \end{list2}
         \vspace{2mm}
 
-      \item[Лицей Академии Яндекса]\small{Проект SchoolRing \hfill
+      \item[Проект SchoolRing]\small{Лицей Академии Яндекса \hfill
         \textsl{Октябрь 2022-Ноябрь 2022}}\\
         Описание проекта:
         \begin{list2}
@@ -218,13 +219,12 @@ citecolor=blue, urlcolor=blue]{hyperref}
         \vspace{2mm}
 
       \item[Начало обучения]\small{Курс Stepik
-        \hfill \textsl{Сентябрь 2021-Апрель 2022\vspace{2mm}}\\
+        \hfill \textsl{Сентябрь 2021-Апрель 2022\vspace{2mm}}}\\
         После пустпления в инженерный класс, я заинтересовался
         программирваинием, и начал самостоятельно проходить курс по
         Python на степик и уже в апреле его с отличием
         \textit{(\href{https://github.com/alchemmist/CV/blob/main/attachments/stepik-python-course.pdf}{сертификат})}.
 
     \end{description}
-
   \end{resume}
   \end{document}
