add license to readme

--- a/russian.tex
+++ b/russian.tex
@@ -16,6 +16,7 @@ citecolor=blue, urlcolor=blue]{hyperref}
 \usepackage{xcolor}
 \usepackage{eso-pic}
 
+% TODO: добавить схему микросервсиной архитектуры с хакатона как пруф
 
 \begin{document}
 {\sc \large Гришин Антон --- Backend разработчик} \\
