--- a/russian.tex
+++ b/russian.tex
@@ -5,18 +5,14 @@
 \usepackage[T1]{fontenc}
 \usepackage{fontawesome}
 
-\usepackage[absolute]{textpos}
-\usepackage{enumitem}
+\usepackage{calc} % для вычислений ширины
 
-\usepackage{graphicx,wrapfig}
-\usepackage{url}
-\usepackage[colorlinks=true, pdfstartview=FitV, linkcolor=blue,
-citecolor=blue, urlcolor=blue]{hyperref}
-\pdfcompresslevel=9
-\usepackage{xcolor}
-\usepackage{eso-pic}
+\newcommand{\fillwithline}{%
+  \raisebox{0.5ex}{\rule[0.5ex]{\widthof{~}}{0.4pt}}%
+}
 
 % TODO: добавить схему микросервсиной архитектуры с хакатона как пруф
+% TODO: сделать автовыраваниване для фотки
 
 \begin{document}
 {\sc \large Гришин Антон --- Backend разработчик} \\
@@ -25,11 +21,11 @@ citecolor=blue, urlcolor=blue]{hyperref}
     \section{\mysidestyle Персональная\\Информация}
     Гришин Антон \\
     Москва, Россия \\
+    \faGithub  \space
+    \href{https://github.com/alchemmist/}{\texttt{alchemmist}} \\
     \faLinkedin \space
     \href{https://www.linkedin.com/in/anton-grishin-6966a8362/}{\texttt{anton-grishin}}
     \\
-    \faGithub  \space
-    \href{https://github.com/alchemmist/}{\texttt{alchemmist}} \\
     \faPaperPlane \space \href{https://t.me/alchemmist}{\texttt{@alchemmist}} \\
     \faPhone \space
     \href{tel:+1234567890}{\color{blue}\texttt{+7(915)067-2638}}  \\
@@ -42,190 +38,195 @@ citecolor=blue, urlcolor=blue]{hyperref}
     \end{textblock}
   \end{minipage}
   \section{\mysidestyle Обо мне}
-  В прошлом, я профессиональный воллейболист. Я окончил спортивную
-  школу олимпийского резерва, а также инженерный класс Московской школы.
+  Я студент, начинающий разрботчик. Я программирую 4 года; за
+  это время я участвовал в разработке 44 репозиториев, отправил 920
+  комитов и написал
+  240412 строчек кода. В прошлом профессиональный
+  \href{https://github.com/alchemmist/CV/blob/main/attachments/sport.pdf}{волейболист}.
 
   \section{\mysidestyle Навыки}
   \begin{description}[leftmargin=0pt, itemindent=*]
-    \item[Python:] FastAPI, Flask, SqlAlchemy, python-telegram-bot,
-      faststream, numpy, pandas.
-    \item[Go] FastAPI, Flask, SqlAlchemy, python-telegram-bot,
-      faststream, numpy, pandas.
-    \item[Databases] Postgres, sqlite, Redis, S3(Yandex Object Storage).
-    \item[Message brokers:] RebbitMQ, Kafka, Mosquitto.
-    \item[Other techonologies:] SQL, Java, JavaScript, Rust, Latex, Go.
-    \item[Scientific softwares] Comsys, Maple, Matlab, Mathematica,
-      Scilab, Keysight's VEE and ADS, NI LabVIEW.
-    \item[Dev tools:] Neovim, Docker, docker-compose, docker-swarm,
-      CI/CD(Github actions, GitLab actions)
+    \item[Python:] \inlinecode{FastAPI}, \inlinecode{Flask},
+      \inlinecode{SqlAlchemy}, \inlinecode{python-telegram-bot},
+      \inlinecode{faststream}, \inlinecode{PyQt}.
+    \item[Go] \inlinecode{http}, \inlinecode{grpc},
+      \inlinecode{protobuf}, \inlinecode{tgbotapi},
+      \inlinecode{reflect}, \inlinecode{gofsm}.
+    \item[Databases] \inlinecode{postgres}, \inlinecode{sqlite},
+      \inlinecode{redis}, \inlinecode{Yandex Object Storage}.
+    \item[Message brokers:] \inlinecode{RebbitMQ}, \inlinecode{Mosquitto}.
+    \item[Other techonologies:] \inlinecode{SQL}, \inlinecode{Java},
+      \inlinecode{JavaScript}, \inlinecode{Rust}.
+    \item[Dev tools:] \inlinecode{Docker}, \inlinecode{Podman},
+      \inlinecode{Make}, \inlinecode{CI/CD}, \inlinecode{Linux}
     \item[Languages:] Russian, English.
   \end{description}
 
   \section{\mysidestyle Образование}
-  Центральный Университет - Математика и компьютерные науки, 2028
+  \href{https://centraluniversity.ru/}{Центральный Университет} -
+  Математика и компьютерные науки, 2028
 
   \section{\mysidestyle Cертификаты}
-  \textbf{Яндекс Лицей.} Я экстерном поступил на второй курс Лицея
-  Академии Яндекси по Промышленной разработке и окончил его с
-  аттистатом с отличием, сдав финальный проект на 100/100 баллов.
+  \textbf{Яндекс Лицей}. Экстерном поступил на второй курс
+  \href{https://lyceum.yandex.ru/}{Лицея
+  Академии Яндекси} по Промышленной разработке и окончил его с
+  \href{https://github.com/alchemmist/CV/blob/main/attachments/yandex-lyceum.pdf}{аттестатом
+  с отличием}, сдав финальный проект на 100/100 баллов.
   \vspace{-6mm}
 
   \hfill \textsl{Сентябрь 2022 - Апрель 2023}
 
   \section{\mysidestyle Достижения}
-  \textbf{Прошёл в финал Чемпионата России по спортивному
-  программированию,} где наша команда разработала микросервисную
-  архитектуру для веб-приложения, агрегирующего спортивные события по
-  всей России. (Технологический стек: RabbitMQ (FastStream), FastAPI,
-  React, Kafka, OAuth). И разработал алгоритм обработки и проверки
-  ежегодных государственных отчетов о спортивных мероприятиях.
+  Прошёл в \textbf{финал Чемпионата России по спортивному
+  программированию,} где разработал
+  \href{https://github.com/alchemmist/CV/blob/main/attachments/architect.pdf}{микросервисную
+  архитектуру} для
+  \href{https://github.com/alchemmist/}{веб-приложения},
+  агрегирующего спортивные события по
+  всей России. Технический стек: \inlinecode{RabbitMQ (FastStream)},
+  \inlinecode{FastAPI},
+\inlinecode{React}, \inlinecode{Kafka}, \inlinecode{OAuth}). И
+разработал алгоритм обработки и проверки ежегодных государственных
+отчетов о спортивных мероприятиях.
+% TODO: вложить хакатон на github и добавить ссылку
 
-  \vspace{-6mm}
+\vspace{-6mm}
 
-  \hfill \textsl{Ноябрь 2024}
+\hfill \textsl{Ноябрь 2024}
 
-  \textbf{Я выиграл научно-практическую конференцию «Наука для
-  жизни»} с проектом умного дома для частных и государственных
-  образовательных учреждений (технологический стек: Redis,
-  Zigbee2MQTT, websockets, Go, Python, Flask, React).
-  \vspace{-6mm}
+Я
+\textbf{\href{https://github.com/alchemmist/CV/blob/main/attachments/scince-for-life-win.pdf}{победитель}
+  научно-практической конференции
+  «\href{https://conf.profil.mos.ru/academ}{Наука для
+жизни}»} с \href{https://github.com/smart-cab/}{проектом умного
+дома} для частных и государственных
+образовательных учреждений (технический стек: \inlinecode{Redis},
+  \inlinecode{Zigbee2MQTT}, \inlinecode{websockets}, \inlinecode{Go},
+\inlinecode{Python}, \inlinecode{Flask}, \inlinecode{React}).
+\vspace{-6mm}
 
-  \hfill \textsl{June 2024}
+\hfill \textsl{Июнь 2024}
 
-  \textbf{Участвовал в хакаотне Nuclear IT hack}, где моя команда
-  работала над кейсом Росатома по разработке сервиса для определения
-  эмоционального тона онлайн-встреч. Я создал
-  прототипы и реализовал фронтенд на React, а моя команда
-  обучала модель.
+\textbf{Учстник хакаотна \href{https://nuclearhack.mephi.ru/}{Nuclear
+IT hack}}, где моя команда работала
+над кейсом Росатома: сервис для определения эмоционального тона онлайн-встреч.
 
-  \vspace{-6mm}
+\vspace{-6mm}
 
-  \hfill \textsl{Апрель 2024}
+\hfill \textsl{Апрель 2024}
 
-  \section{\mysidestyle Interestings}\vspace{2mm}
-  \begin{description}
-    \item[Philosophy] Unix, Linux and Windows
-    \item[Books:] Unix, Linux and Windows
+\textbf{\href{https://github.com/alchemmist/CV/blob/main/attachments/informatics-olimpic.pdf}{Призёр}
+3-й степени}, олимпиады МПГУ по информатике:
+«Прикладная информатика»
+
+\vspace{-3mm}
+
+\hfill \textsl{Июнь 2023}
+
+\section{\mysidestyle Interestings}\vspace{2mm}
+\begin{description}
+  \item[Formal verfification:] Coq
+  \item[Linux:] Arch, Hyprland
+\end{description}
+
+\vfill
+% ------------------------------------------------------------------ %
+
+\section{\mysidestyle Опыт}\vspace{2mm}
+
+\begin{description}
+
+  \item[SmartCab]\small{Петпроект \hfill
+    \textsl{November 2004 — February 2005}}\\
+    \href{https://github.com/smart-cab}{Система умного дома} для
+    частных и государственных образовательных учереждений. Разработал
+    \href{https://www.figma.com/design/8H1tFpxgmIDV1xp06ndi73/SmartCab?node-id=0-1&p=f}{протопипы}
+    дизайна админ панели и интерфейса планшета управления
+    (\textit{т.н. хаб}). Сверстал их
+    (\textit{\href{https://github.com/smart-cab/smartcab-hub/tree/main/frontend}{1},
+    \href{https://github.com/smart-cab/smartcab-dashboard/tree/main/frontend}{2}})
+    с использованием \inlinecode{React}.
+    \href{https://github.com/smart-cab/smartcab-bot}{Написал бота}
+    для администрирования системы.
+
+    \vspace{3mm}
+
+  \item[Starship]\small{Петпроект
+    \hfill \textsl{October 2003-September 2004\vspace{2mm}}}\\
+    Текстовая экшн \href{https://github.com/starship-crew}{Telegram
+    игра}, задача игрока в которой – прокачка своего космического
+    корабля и соревнование в боях с другими звездолётами. Разработал
+    мехнику онлайн дуэлей с реальными игроками в Telegram боте. В
+    рамках телеграм бота разработал удобный движок рендеринга
+    сообщений в чате через jinja2 шаблоны, так как для тектовой игры
+    требовалось гибко работоать с большим количеством сценарных и
+    пейзжаных текстов.
+
+    Технический стек:
+    \begin{list2}
+    \item{Язык: \inlinecode{Python}}
+    \item{Библиотеки: \inlinecode{Flask}, \inlinecode{alembic},
+        \inlinecode{python-telegram-bot}, \inlinecode{SqlAlchemy},
+      \inlinecode{jinja2}}
+    \item{Контейнеризация: \inlinecode{Docker}}
+    \end{list2}
+
+    \vspace{3mm}
+
+  \item[Corpse]\small{Петпроект
+    \hfill \textsl{Ноябрь 2022 — Январь 2022\vspace{2mm}}}\\
+    Полнофункциональный модульный
+    \href{https://github.com/corpse-inc/corpse}{игровой движок} с
+    архитектурой
+    \href{https://en.wikipedia.org/wiki/Entity_component_system#:~:text=Entity%E2%80%93component%E2%80%93system%20(ECS,Entity%E2%80%93Component%E2%80%93System%20layout.}{ECS}
+      % для игр в жанре survival и top-down shooter. Вместе с движком
+      % была разработана демонастрационная sandbox игра о зомбиапокалипсисе.
+
+      Технический стек:
+      \begin{list2}
+      \item{Язык: \inlinecode{Python}}
+      \item{Фреймворк: \inlinecode{Pygame}}
+      \item{Библиотеки: \inlinecode{esper}, \inlinecode{pytmx}}
+      \item{Инструменты работы с графикой: \inlinecode{aseprite},
+        \inlinecode{Tiled}}
+      \end{list2}
+
+      \vspace{3mm}
+
+    \item[SchoolRing]\small{Петпроект\hfill
+      \textsl{Октябрь 2022 — Ноябрь 2022\vspace{2mm}}}\\
+      \href{https://github.com/alchemmist/school-ring}{Дексктоп
+      приложение}, система управления звонками в школах
+      (\href{https://github.com/}{\texttt{release
+      v0.0.2}}). Настроил
+      \href{https://github.com}{\texttt{pre-commit}} для
+      амтоматической конвертации \inlinecode{.ui} файлов в
+      \inlinecode{.py}, а так же \href{https://github.com}{Github
+      Actions} для автоматической сборки нового релиза под все
+      операционные системы при каждом комите в main. Недавно перевол
+      проект на \href{https://astral.sh/blog/uv}{\texttt{uv}} для
+      удобного управления зависимостями.
+      % TODO: сделать рабочий релиз
+      % TODO: настроить pre-commit для .ui -> .py (написать об этом здесь)
+      % TODO: перехать только на pyqt6
+      % TODO: настроить pre-commit и добавить ссылку на файл
+      % TODO: подконец исправить версию релиза
+
+      Технический стек:
+      \begin{list2}
+      \item{Язык: \inlinecode{Python}}
+      \item{Фреймворк: \inlinecode{PyQt6}}
+      \item{Стандартная библиотека: \inlinecode{threading},
+        \inlinecode{schedule}}
+      \end{list2}
+
+      \vspace{3mm}
+
+    \item[Курс Python]\small{Начало обучения
+      \hfill \textsl{Сентябрь 2021 — Апрель 2022\vspace{2mm}}}\\
+      Прошёл курс по Python на Stepik и завершил его с
+      \href{https://github.com/alchemmist/CV/blob/main/attachments/stepik-python-course.pdf}{отличием}.
+
   \end{description}
-
-  \vfill
-  % ------------------------------------------------------------------ %
-
-  \section{\mysidestyle История}\vspace{2mm}
-
-  \begin{description}
-
-    \item[Measurement Engineer (CNRS)]\small{XLIM \hfill \textsl{June
-      2016-Present}}\\
-    \item[Lecturer]\small{University of Colorado, Boulder \hfill
-      \textsl{January 2016-May 2016}}\\
-      ECEN 5014-003, ``Microwave Measurements and Calibration Fundamentals''
-      \vspace{2mm}
-
-    \item[Research Associate]\small{University of Colorado at Boulder
-      \hfill \textsl{June 2013-May 2016}}\\
-      Achievements:
-      \begin{list2}
-      \item{LabVIEW software for a ``Do-it-yourself'' Large-Signal
-        Network Analyzer (LSNA)}
-      \item{Time domain measurement setup in Scilab (VTD-SWAP)}
-      \item{Outphasing PA characterizations}
-      \item{Load-pull in time-domain}
-      \end{list2}
-      \vspace{2mm}
-
-    \item[Measurement Engineer (CNRS)]\small{XLIM \hfill
-      \textsl{December 2007-May 2013}}\\
-      Achievements:
-      \begin{list2}
-      \item{Korrigan European Project activities (RTP
-            N$^{\circ}$102.052 funded within the EUROPA framework in the
-          CEPA2 priority area - ends early 2009) : GaN HEMTs circuits
-          level modeling from european foundries (Thales / QinetiQ) for
-        HPA, LNA and Switches}
-      \item{Time domain measurement setup (LSNA) development on
-        Scilab-TCL/TK (GUI, calibration and measurement automation)}
-      \item{Development of HEMTs modeling tools (Scilab)}
-      \item{Contractual measurements such as load-pull, linearity,
-        high impedance probe in both frequency (VNA) and time domain (LSNA)}
-      \end{list2}
-      \vspace{2mm}
-
-    \item[Research Associate - Visiting Scholar]\small{University of
-      Colorado at Boulder \hfill \textsl{February 2012-July 2012}}\\
-      GaN HEMTs based rectifiers characterizations and analysis
-      \vspace{2mm}
-
-    \item[Research Engineer (CNRS)]\small{XLIM \hfill \textsl{May
-      2005-November 2007}}\\
-      Achievements:
-      \begin{list2}
-      \item{Frequency domain load-pull measurement setup (VNA in
-          receiver mode with pulse capabilities) developpemnt with
-          Scilab (calibration procedures, measurement automation, data
-        processing)}
-      \item{Large signal caracterization of transistor (mainly
-          european GaN in the framework of Korrigan}
-        \item{Korrigan WP3.3 workpackage leader in Korrigan.
-            Developpement of a internet database (Php / mySQL) to let
-          partners share data and informations}
-        \item{GaN HEMTs ``spice-like'' nonlinear models}
-        \end{list2}
-        \vspace{2mm}
-
-      \item[Research Engineer]\small{NMDG Engineering bvba \hfill
-        \textsl{November 2004-February 2005}}\\
-        Implementation of the High Impedance Probe module
-        (calibration and measurements) in the commercial LSNA
-        Software (based on Mathematica)
-
-        \vspace{2mm}
-
-      \item[Postdoctoral scientist]\small{CNES (French Space Agency)
-        \hfill \textsl{October 2003-September 2004}}\\
-        Development of characterization tools interfaces within the
-        free open-source scientific package Scilab
-
-        \vspace{2mm}
-
-      \item[Postdoctoral scientist]\small{CNES (French Space Agency)
-        \hfill \textsl{October 2002-September 2003}}\\
-        Achievements:
-        \begin{list2}
-        \item{Large Signal Network Analysis (LSNA) characterizations
-          in time-domain}
-        \item{Development of a new LSNA module in order to
-            investigate time domain waveforms at internal nodes of
-            MMICs with high impedance probes (HIP) to validate circuits
-          designs and to analyze nonlinear parametric stability}
-        \item{Large Signal Network Analysis (LSNA) characterizations
-          in time-domain}
-        \end{list2}
-        \vspace{2mm}
-
-      \item[Проект SchoolRing]\small{Лицей Академии Яндекса \hfill
-        \textsl{Октябрь 2022-Ноябрь 2022}}\\
-        Описание проекта:
-        \begin{list2}
-        \item{Development of the RF time-domain envelope measurement
-          setup (hardware and software)}
-        \item{Development of the calibration procedure of the
-          time-domain envelope measurement setup}
-        \item{Power amplifiers characterizations : Load-pull, IM3, NPR}
-        \item{Behavioral modeling of nonlinear devices with memory
-          effects for system level}
-        \item{Development of a dynamic complex gain model with
-          neural networks}
-        \end{list2}
-        \vspace{2mm}
-
-      \item[Начало обучения]\small{Курс Stepik
-        \hfill \textsl{Сентябрь 2021-Апрель 2022\vspace{2mm}}}\\
-        После пустпления в инженерный класс, я заинтересовался
-        программирваинием, и начал самостоятельно проходить курс по
-        Python на степик и уже в апреле его с отличием
-        \textit{(\href{https://github.com/alchemmist/CV/blob/main/attachments/stepik-python-course.pdf}{сертификат})}.
-
-    \end{description}
-  \end{resume}
-  \end{document}
+\end{resume}
+\end{document}
