add precommit for build pdf with make

--- a/russian.tex
+++ b/russian.tex
@@ -13,6 +13,10 @@
 
 % TODO: добавить схему микросервсиной архитектуры с хакатона как пруф
 % TODO: сделать автовыраваниване для фотки
+% TODO: возможно весь технический скилл написать?
+% TODO: сплющить проекты с одинаковым стеком технологий
+% TODO: про стартап нписать, поговорить с Марком чтоб его заопенсорсить
+% TODO: 
 
 \begin{document}
 {\sc \large Гришин Антон --- Backend разработчик} \\
